--- a/bibliography.bib
+++ b/bibliography.bib
@@ -39,7 +39,6 @@
     volume = {24},
     year = {1980}
 }
-
 % Nowak's book on evolutionary game theory
 @book{Nowak,
     author = {Nowak, Martin A},
@@ -386,4 +385,15 @@ year = {1958},
 doi = {10.1287/mnsc.5.1.5},
 URL = { https://doi.org/10.1287/mnsc.5.1.5},
 eprint = {https://doi.org/10.1287/mnsc.5.1.5}
+}
+
+@article{Li2011,
+  title={Engineering design of strategies for winning iterated prisoner's dilemma competitions},
+  author={Li, Jiawei and Hingston, Philip and Kendall, Graham},
+  journal={IEEE Transactions on Computational Intelligence and AI in Games},
+  volume={3},
+  number={4},
+  pages={348--360},
+  year={2011},
+  publisher={IEEE}
 }
