--- a/tex/stewart_plotkin_simulation.tex
+++ b/tex/stewart_plotkin_simulation.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lllllll}
 \toprule
-{} & \$p\_1\$ & \$p\_2\$ & \$p\_3\$ & \$p\_4\$ & \$\textbackslash frac\{1\}\{10\} \textbackslash sum\textbackslash limits\_\{i = 1\} \textasciicircum  \{10\} u\_q\textasciicircum \{(i)\} (p)\$ & \$\textbackslash frac\{1\}\{10\} \textbackslash sum\textbackslash limits\_\{i = 1\} \textasciicircum  \{10\} U\_q\textasciicircum \{(i)\} (p)\$ \\
+{} & $p_1$ & $p_2$ & $p_3$ & $p_4$ & $\frac{1}{10} \sum \limits_{i = 1}^{10} u_q^{(i)} (p)$ & $\frac{1}{10} \sum\limits_{i = 1} ^{10} U_q^{(i)} (p)$ \\
 \midrule
 0  &   1/5 &   1/5 &   1/5 &   1/5 &                                            2.07675 &                                            2.07173 \\
 1  &   1/5 &   1/5 &   1/5 &   2/5 &                                            2.12906 &                                            2.12359 \\
