draft writting to best response dynamics

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -397,3 +397,36 @@ eprint = {https://doi.org/10.1287/mnsc.5.1.5}
   year={2011},
   publisher={IEEE}
 }
+
+@article{Nowak1992,
+  title={Evolutionary games and spatial chaos},
+  author={Nowak, Martin A and May, Robert M},
+  journal={Nature},
+  volume={359},
+  number={6398},
+  pages={826},
+  year={1992},
+  publisher={Nature Publishing Group}
+}
+
+@article{Knight2018,
+    author = {Knight, Vincent AND Harper, Marc AND Glynatsi, Nikoleta E. AND Campbell, Owen},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Evolution reinforces cooperation with the emergence of self-recognition mechanisms: An empirical study of strategies in the Moran process for the iterated prisoner’s dilemma},
+    year = {2018},
+    month = {10},
+    volume = {13},
+    url = {https://doi.org/10.1371/journal.pone.0204981},
+    pages = {1-33},
+    abstract = {We present insights and empirical results from an extensive numerical study of the evolutionary dynamics of the iterated prisoner’s dilemma. Fixation probabilities for Moran processes are obtained for all pairs of 164 different strategies including classics such as TitForTat, zero determinant strategies, and many more sophisticated strategies. Players with long memories and sophisticated behaviours outperform many strategies that perform well in a two player setting. Moreover we introduce several strategies trained with evolutionary algorithms to excel at the Moran process. These strategies are excellent invaders and resistors of invasion and in some cases naturally evolve handshaking mechanisms to resist invasion. The best invaders were those trained to maximize total payoff while the best resistors invoke handshake mechanisms. This suggests that while maximizing individual payoff can lead to the evolution of cooperation through invasion, the relatively weak invasion resistance of payoff maximizing strategies are not as evolutionarily stable as strategies employing handshake mechanisms.},
+    number = {10},
+    doi = {10.1371/journal.pone.0204981}
+}
+
+@book{Nisan2007,
+  title={Algorithmic game theory},
+  author={Nisan, Noam and Roughgarden, Tim and Tardos, Eva and Vazirani, Vijay V},
+  year={2007},
+  publisher={Cambridge University Press}
+}
