--- a/tex/stewart_plotkin_tournament_strategies_list.tex
+++ b/tex/stewart_plotkin_tournament_strategies_list.tex
@@ -1,5 +1,6 @@
 \begin{table}
-        \resizebox{\textwidth}{!}{\begin{tabular}{clcc}
+        \begin{center}
+        \resizebox{.5\textwidth}{!}{\begin{tabular}{clcc}
         \toprule
         {}&  Name & Memory one representation & Reference \\
         \midrule
@@ -18,6 +19,7 @@
         \cite{Stewart2012} \\
         \bottomrule
     \end{tabular}}
-    \caption{The memory one strategies from~\cite{Stewart2012}.}
+    \caption{List of strategies used in the tournament described in~\cite{Stewart2012}.}
     \label{table:list_stewart_plotkin}
+    \end{center}
 \end{table}
